--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ docstring-code-line-length = 78
 "conftest.py" = ["F401", "F811"]
 
 [[tool.mypy.overrides]]
-module = ['pigpio', 'requests']
+module = ['requests']
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
