--- a/mise.toml
+++ b/mise.toml
@@ -44,7 +44,7 @@ echo "# pip"
 uv pip install -U --group dev -e .
 # uv pip install -U --group samples -e .
 '''
-alias = "upproject"
+alias = "upproj"
 # depends = ["upgradeuv"]
 
 [tasks.lint]
